<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background_color"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/log_in"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/loginTxtColor"
                android:textSize="35sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edit_design"
                android:hint="@string/emailTxt"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edit_design"
                android:hint="@string/passwordTxt"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/forgot_password"
                android:id="@+id/forgot_password_btn"
                android:textColor="@color/teal_200" />


            <Button
                android:id="@+id/loginUserBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button_design"
                android:padding="15dp"
                android:text="@string/loginLbl"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/loginTxtColor"
                android:textStyle="bold"
                app:backgroundTint="#C61E1E"
                app:backgroundTintMode="add" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/orTxt"
                android:textAppearance="?android:textAppearanceLarge" />

            <Button
                android:id="@+id/registerBackBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button_design"
                android:padding="15dp"
                android:text="@string/registerTxt"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/loginTxtColor"
                android:textStyle="bold"
                app:backgroundTint="#A31818"
                app:backgroundTintMode="add" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>