<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="18dp"
    android:elevation="5dp"
    android:padding="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/job_title_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/job_title"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/job_post_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="6 November, 2021"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/lightGrey"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/job_desc_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:padding="10dp"
            android:text="Description"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/job_skill_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:padding="10dp"
            android:text="Skills"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/job_salary_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="180dp"
                android:padding="10dp"
                android:text="Salary"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/teal_200"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/edit_job_btn"
                android:text="@string/edit" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/delete"
                android:id="@+id/delete_job_btn" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>